# learn-opencv

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
face-detection/: CMakeLists.txt  README.md  main.cpp  run.sh
face-landmark-detection/: CMakeLists.txt  README.md  run.sh
facial-landmarks/: CMakeLists.txt  main.cpp  run.sh
head-pose-estimation/: CMakeLists.txt  README.md  main.cpp  run.sh
